--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,5 +6,8 @@
 @layer base {
     h1 {
         @apply text-4xl;
+    }
+    h2 {
+        @apply text-2xl;
     }
 }
